# wasi-test

./: Cargo.toml  init.sh  wasi_snapshot_preview1.wasm
guest/: Cargo.toml  all.rs
guest/src/: lib.rs
guest/wit/: world.wit
guest2/: Cargo.toml
guest2/wit/: world.wit
guestcommand/: Cargo.toml
guestcommand/src/: http14.rs  main.rs
host/: Cargo.toml
host/src/: main.rs
wit/: world.wit
