[package]
name = "guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cargo-component-bindings = "0.4.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "smndtrl:simple"
# target = { path = "../wit", world = "world" }
# adapter = "../wasi_snapshot_preview1.wasm"

[package.metadata.component.dependencies]

# [package.metadata.component.target]
# path = "../wit"
# world = "example"

[package.metadata.component.target.dependencies]
# "wasi:poll" = { path = "../wit/deps/poll"}
"wasi:io" = { path = "../wit/deps/io" }
"wasi:http" = { path = "../wit/deps/http" }
"wasi:clocks" = { path = "../wit/deps/clocks" }
"wasi:random" = { path = "../wit/deps/random" }
"wasi:cli" = { path = "../wit/deps/cli" }
"wasi:filesystem" = { path = "../wit/deps/filesystem" }
"wasi:sockets" = { path = "../wit/deps/sockets" }
